@@ -1,3 +1,7 @@
+2010-09-16  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15497: [Caching framework] Remove tagIndex from memcached and apc backend
+
 2010-09-16  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #15531: jumpurl check fails if mime type is not known
